# concrete-biopython

./: .gitignore  Design.md  README.md  main.py  pyproject.toml
.github/workflows/: main.yml
BioConcrete/: FheSeq.py  HfeSeq.py  Seq.py  utils.py
ConcreteBioPython/: FheSeq.py  SeqWrapper.py  tutorial.ipynb
Tests/: test_FheSeq.py  test_utils.py
concrete_biopython/: Alphabets.py  BioCircuit.py  FheSeq.py  SeqWrapper.py
tempDir/: test_FheSeq.py
tests/: atest.py  test_FheSeq.py
tutorial/: applications.ipynb  tutorial.ipynb  tutorial_bis.ipynb
