[tool.poetry]
name = "concrete-biopython"
version = "0.0.1"
description = ""
authors = ["Lcressot <Lcressot@gmail.com>"]
readme = "README.md"
packages = [{include = "concrete_biopython"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
biopython = "^1.81"
concrete-python = "^1.0.0"
ipykernel = "^6.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
